Update css color pallet / App UI
- Update css color props to match the Figma file style guide.

Other UI improvements:
- Increase app body top spacing.
- Update marketplace filter UI.
- Fix marketplace product price space when product is on sale.
- Update app home side images with better design.

--- a/src/app/components/accordion/stylesheet.scss
+++ b/src/app/components/accordion/stylesheet.scss
@@ -1,5 +1,5 @@
 .wppw .accordion {
-    border: 1px solid var(--mdc-theme-primary);
+    border: 1px solid var(--color-secondary);
     margin-bottom: .6em;
     margin-top: .6em;
     opacity: .8;
@@ -12,7 +12,7 @@
     }
 
     .accordion-summary {
-        background: var(--dc-theme-grey--light4);
+        background: var(--color-secondary);
         cursor: pointer;
         font-weight: 700;
         padding: 10px 15px;
