--- a/src/app/components/errorCard/stylesheet.scss
+++ b/src/app/components/errorCard/stylesheet.scss
@@ -1,6 +1,3 @@
 .wppw .error-card {
-    background-color: var(--mdc-theme-error--light);
-    border-color: var(--mdc-theme-error);
-    border-width: 1px 1px 1px 4px;
-    border-style: solid;
+    background-color: var(--color-error-contrast);
 }
