--- a/src/app/pages/home/stylesheet.scss
+++ b/src/app/pages/home/stylesheet.scss
@@ -3,13 +3,13 @@
     position: relative;
 
     .components-card__header {
-        background: var(--dc-theme-black);
+        background: var(--color-black);
         flex-direction: column;
         @media screen and (min-width: 1132px) {
             flex-direction: row;
         }
         .heading {
-            color: var(--dc-theme-white);
+            color: var(--color-white);
             font-size: 1.5rem;
             margin-bottom: 0 !important; // wp core override
             @media screen and (min-width: 1132px) {
@@ -91,8 +91,8 @@
                 align-items: center;
                 .dashicons, svg {
                     margin-right: 8px;
-                    color: var(--mdc-theme-primary);
-                    fill: var(--mdc-theme-primary);
+                    color: var(--color-primary);
+                    fill: var(--color-primary);
                 }
             }
             @media screen and (max-width: 700px) {
