--- a/src/app/pages/marketplace/stylesheet.scss
+++ b/src/app/pages/marketplace/stylesheet.scss
@@ -75,12 +75,13 @@
             &::before {
                 content: '';
                 position: absolute;
-                bottom: -12px;
                 left: auto;
                 right: auto;
                 height: 20px;
                 width: 20px;
+                top: 42px;
                 transform: rotate(45deg);
+                transition: none;
                 background: linear-gradient(133deg, transparent 50%, var(--color-primary-dark) 50%);
                 
                 @media screen and (max-width: 600px) {
