--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -236,3 +236,8 @@ body.toplevel_page_web {
         color: var(--color-secondary-dark) !important;
     }
 }
+
+.nfd-disabled {
+    opacity: .5;
+    pointer-events: disabled;
+}
