tailwind class not generating for components not inside /components

--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -368,3 +368,9 @@ body.toplevel_page_web {
         margin-bottom: 0;
     }
 }
+
+.nfd-page.wppw-home {
+    .nfd-coming-soon-content {
+        align-items: center;
+    }
+}
